--- a/docs/device/x13s.md
+++ b/docs/device/x13s.md
@@ -1,8 +1,33 @@
+# uefi
+
+https://docs.voidlinux.org/installation/guides/arm-devices/thinkpad-x13s.html
+
+> update the UEFI firmware to at least version 1.59 from Windows,
+
 # Ubuntu
 
-- [ThinkPad X13sにubuntuを入れる](https://qiita.com/DoooJJH/items/7a0a7e857c7955830388)
-- [thinkpad x13s に linux を入れる](https://u7fa9.org/memo/articles/9/40c44933-3f93-4174-8844-50889de77899.html)
+- @2025 [ThinkPad X13sにubuntuを入れる](https://qiita.com/DoooJJH/items/7a0a7e857c7955830388)
 
-- https://www.reddit.com/r/thinkpad/comments/1gq6on4/any_linux_options_for_an_x13s_arm/?tl=ja
+> ThinkPad X13s
+> Snapdragon8cx Gen3
+> 24.10のiso
+
+- @2024 https://www.reddit.com/r/thinkpad/comments/1gq6on4/any_linux_options_for_an_x13s_arm/?tl=ja
 
 > 24.10 から Ubuntu ARM インストーラー ISO でサポート
+
+
+# arch
+
+- https://github.com/ironrobin/archiso-x13s
+
+- @2023 [thinkpad x13s に linux を入れる](https://u7fa9.org/memo/articles/9/40c44933-3f93-4174-8844-50889de77899.html)
+- https://www.reddit.com/r/archlinux/comments/77p5j0/upgrade_issues_signature_has_unknown_trust/?tl=ja
+
+```sh
+pacman-key --refresh-keys
+```
+
+https://github.com/ironrobin/x13s-alarm
+
+https://zenn.dev/mitate_gengaku/articles/fix-archlinux-pgp-key-error
